# l0cky

./: .gitignore  README.md  README.txt
BSP2CubeMX/: RADME.md  README.md  Rakefile
GoogleGtestSetup/: README.md  addGtestS.sh
projectTemplateForSDL/: CMakeLists.txt
week-01/day-2/: fifth.txt  first.txt  fourth.txt  second.txt  third.txt
week-01/day-3/AnimalsAndLegs/: CMakeLists.txt  main.cpp
week-01/day-3/AverageOfInput/: CMakeLists.txt  main.cpp
week-01/day-3/Bmi/: CMakeLists.txt  main.cpp
week-01/day-3/CodingHours/: CMakeLists.txt  main.cpp
week-01/day-3/ConditionalVariableMutation/: CMakeLists.txt  main.cpp
week-01/day-3/CountFromTo/: CMakeLists.txt  main.cpp
week-01/day-3/Cuboid/: CMakeLists.txt  main.cpp
week-01/day-3/DefineBasicInfo/: CMakeLists.txt  main.cpp
week-01/day-3/DrawChessTable/: CMakeLists.txt  main.cpp
week-01/day-3/DrawDiagonal/: CMakeLists.txt  main.cpp
week-01/day-3/DrawDiamond/: CMakeLists.txt  main.cpp
week-01/day-3/DrawPyramid/: CMakeLists.txt  main.cpp
week-01/day-3/DrawSquare/: CMakeLists.txt  main.cpp
week-01/day-3/DrawTriangle/: CMakeLists.txt  main.cpp
week-01/day-3/FavoriteNumber/: CMakeLists.txt  main.cpp
week-01/day-3/FindTheSubstring/: CMakeLists.txt  main.cpp
week-01/day-3/FizzBuzz/: CMakeLists.txt  main.cpp
week-01/day-3/GuessTheNumber/: CMakeLists.txt  main.cpp
week-01/day-3/HelloOthers/: CMakeLists.txt  main.cpp
week-01/day-3/HelloUser/: CMakeLists.txt  main.cpp
week-02/day-3/SquarePositioning/: CMakeLists.txt  main.cpp
week-04/day-4/Apples/: CMakeLists.txt
week-04/day-4/Apples/Apples_lib/: CMakeLists.txt  apple.cpp
week-04/day-4/Apples/Apples_tests/: Apples_Test.cpp  CMakeLists.txt
week-08/tennis_game/: CMakeLists.txt
week-10/control_project/: test21.ioc
(+375 files in other folders)
